# magnum_demo

./: .gitignore  CMakeLists.txt
triangle/: CMakeLists.txt  main.cpp
